# yudown

./: .gitignore  .pre-commit-config.yaml  README.md  YuDownloader.py  pyproject.toml
tests/: test_yudown.py  test_yudownloader.py
yudown/: __init__.py  __main__.py  audio.py  cli.py  database.py  model.py  playlist.py  utils.py
yudownloader/: __main__.py  cli.py  database.py  main.py  model.py  playlist.py  video.py
