[tool.poetry]
name = "yudownloader"
version = "0.1.0"
description = "This is a python script to download Youtube Media"
authors = ["TianaNanta <andrianjakananta@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
yudownloader = "yudownloader.__main__:__main__"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
colorama = "^0.4.6"
Pygments = "^2.14.0"
pytube = "^12.1.2"
rich = "^12.6.0"
shellingham = "^1.5.1"
typer = "^0.7.0"
tinydb = "^4.7.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
