[tool.poetry]
name = "yudown"
version = "0.6.0"
description = "This is a python script to download Youtube Media file"
authors = ["TianaNanta <andrianjakananta@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
tinydb = "^4.7.1"
pytube = "^12.1.2"

[tool.poetry.scripts]
yudown = "yudown.cli:app"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pytest = "^7.2.1"
pre-commit = "^3.6.0"
black = "^23.12.1"
isort = "^5.13.2"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
split_on_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
